--- a/index1.html
+++ b/index1.html
@@ -3,145 +3,167 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dropdown Events</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <title>Affordable Housing Data Visualization</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h2>Austin Household Income</h2>
-    <p>by District</p>
-    <select id="selDataset">
-        <option value="District1">District 1</option>
-        <option value="District2">District 2</option>
-        <option value="District3">District 3</option>
-        <option value="District4">District 4</option>
-        <option value="District5">District 5</option>
-        <option value="District6">District 6</option>
-        <option value="District7">District 7</option>
-        <option value="District8">District 8</option>
-        <option value="District9">District 9</option>
-        <option value="District10">District 10</option>
-    </select>
+    <div style="width: 800px; margin: auto;">
+        <canvas id="districtChart"></canvas>
+    </div>
 
-    <div id="pie"></div>
+    <div style="width: 800px; margin: auto; margin-top: 20px;">
+        <canvas id="zipHistogram"></canvas>
+    </div>
 
     <script>
-        // Function to fetch data from API and build metadata
-        function buildMetadata() {
-            // Fetch data from API
-            d3.json("https://data.austintexas.gov/resource/puux-7swp.json").then((data) => {
-                console.log(data); // Check console for data structure
-                
-                // Example: Assuming 'data' contains the JSON response
-                // Extracting data example (modify as per your data structure)
-                let districtNumbers = [
-                    parseFloat(data[0].hh_income_less_than_10000),
-                    parseFloat(data[0].hh_income_10000_to_14999),
-                    parseFloat(data[0].hh_income_15000_to_24999),
-                    parseFloat(data[0].hh_income_25000_to_34999),
-                    parseFloat(data[0].hh_income_35000_to_49999),
-                    parseFloat(data[0].hh_income_50000_to_74999),
-                    parseFloat(data[0].hh_income_75000_to_99999),
-                    parseFloat(data[0].hh_income_100000_to_149999),
-                    parseFloat(data[0].hh_income_150000_to_199999),
-                    parseFloat(data[0].hh_income_200000_or_more)
-                    // Extract more data fields as needed
-                ];
+        document.addEventListener('DOMContentLoaded', function() {
+            // Data for Affordable Houses by District
+            const districtData = [
+                { "district": 1, "units": 9237 },
+                { "district": 2, "units": 7283 },
+                { "district": 3, "units": 7233 },
+                { "district": 4, "units": 5945 },
+                { "district": 5, "units": 3736 },
+                { "district": 6, "units": 730 },
+                { "district": 7, "units": 3274 },
+                { "district": 8, "units": 273 },
+                { "district": 9, "units": 6128 },
+                { "district": 10, "units": 602 }
+            ];
 
-                let categoryLabels = [
-                    "Less than $10K",
-                    "$10K - $14,999",
-                    "$15K - $24,999",
-                    "$25K - $34,999",
-                    "$35K - $49,999",
-                    "$50K - $74,999",
-                    "$75K - $99,999",
-                    "$100K - $149,999",
-                    "$150K - $199,999",
-                    "More than $200K"
-                    // Add more labels as needed based on your data
-                ];
+            const districtLabels = districtData.map(item => `District ${item.district}`);
+            const districtUnits = districtData.map(item => item.units);
 
-                // Display the default plot
-                init(districtNumbers, categoryLabels);
-            }).catch((error) => {
-                console.log("Error fetching data:", error);
+            // Create Affordable Houses by District chart
+            const districtCtx = document.getElementById('districtChart').getContext('2d');
+            new Chart(districtCtx, {
+                type: 'bar',
+                data: {
+                    labels: districtLabels,
+                    datasets: [{
+                        label: 'Number of Affordable Houses',
+                        data: districtUnits,
+                        backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                        borderColor: 'rgba(54, 162, 235, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true,
+                            ticks: {
+                                stepSize: 1000
+                            },
+                            title: {
+                                display: true,
+                                text: 'Number of Affordable Houses'
+                            }
+                        },
+                        x: {
+                            title: {
+                                display: true,
+                                text: 'District Number'
+                            }
+                        }
+                    }
+                }
             });
-        }
 
-        // Function to initialize the plot
-        function init(values, labels) {
-            // Default trace for the pie chart
-            let trace = {
-                values: values,
-                labels: labels,
-                type: 'pie',
-                sort: false  // Disable sorting if not needed
+            // Data for Affordable Houses by Zip
+            const zipData = {
+                78474.0: 2,
+                78610.0: 292,
+                78613.0: 0,
+                78617.0: 1107,
+                78652.0: 174,
+                78653.0: 1021,
+                78659.0: 310,
+                78660.0: 240,
+                78667.0: 240,
+                78701.0: 1053,
+                78702.0: 3391,
+                78703.0: 8,
+                78704.0: 2044,
+                78705.0: 2235,
+                78717.0: 269,
+                78721.0: 2519,
+                78722.0: 356,
+                78723.0: 4380,
+                78724.0: 1391,
+                78725.0: 236,
+                78726.0: 110,
+                78727.0: 433,
+                78728.0: 186,
+                78729.0: 545,
+                78730.0: 21,
+                78731.0: 357,
+                78732.0: 106,
+                78733.0: 70,
+                78734.0: 62,
+                78735.0: 159,
+                78736.0: 66,
+                78737.0: 72,
+                78738.0: 48,
+                78739.0: 60,
+                78741.0: 2776,
+                78742.0: 22,
+                78744.0: 2094,
+                78745.0: 2815,
+                78746.0: 143,
+                78747.0: 628,
+                78748.0: 2096,
+                78749.0: 417,
+                78750.0: 229,
+                78751.0: 1221,
+                78752.0: 757,
+                78753.0: 1538,
+                78754.0: 524,
+                78756.0: 147,
+                78757.0: 342,
+                78758.0: 1638,
+                78759.0: 231
             };
 
-            // Data Array
-            let data = [trace];
+            const zipLabels = Object.keys(zipData);
+            const zipUnits = Object.values(zipData);
 
-            // Layout object
-            let layout = {
-                height: 600,
-                width: 800,
-                title: 'Austin Household Income Distribution'  // Chart title
-            };
-
-            // Render the plot to the div tag with id "pie"
-            Plotly.newPlot("pie", data, layout);
-        }
-
-        // Initialize the metadata function
-        buildMetadata();
-
-        // Function called by DOM changes (dropdown menu)
-        function getData() {
-            // Use D3 to select the dropdown menu
-            let dropdownMenu = d3.select("#selDataset");
-
-            // Assign the value of the dropdown menu option to a variable
-            let dataset = dropdownMenu.property("value");
-
-            // Placeholder logic for updating based on dataset selected
-            // This should be replaced with actual data fetching and update logic
-            let newdata = []; // Placeholder for updated data
-
-            if (dataset === "District1") {
-                newdata = [10, 20, 30, 40, 50, 60, 70, 80, 90, 100]; 
-            } else if (dataset === "District2") {
-                newdata = [20, 30, 40, 50, 60, 70, 80, 90, 100, 110]; 
-            } else if (dataset === "District3") {
-                newdata = [30, 40, 50, 60, 70, 80, 90, 100, 110, 120]; 
-            } else if (dataset === "District4") {
-                newdata = [40, 50, 60, 70, 80, 90, 100, 110, 120, 130]; 
-            } else if (dataset === "District5") {
-                newdata = [50, 60, 70, 80, 90, 100, 110, 120, 130, 140]; 
-            } else if (dataset === "District6") {
-                newdata = [60, 70, 80, 90, 100, 110, 120, 130, 140, 150];
-            } else if (dataset === "District7") {
-                newdata = [70, 80, 90, 100, 110, 120, 130, 140, 150, 160]; 
-            } else if (dataset === "District8") {
-                newdata = [80, 90, 100, 110, 120, 130, 140, 150, 160, 170]; 
-            } else if (dataset === "District9") {
-                newdata = [90, 100, 110, 120, 130, 140, 150, 160, 170, 180]; 
-            } else if (dataset === "District10") {
-                newdata = [100, 110, 120, 130, 140, 150, 160, 170, 180, 190];
-            }
-
-            // Call function to update the chart
-            updatePlotly(newdata);
-        }
-
-        // Update the restyled plot's values
-        function updatePlotly(newdata) {
-            Plotly.restyle("pie", "values", [newdata]);
-        }
-
-        // Event listener for dropdown menu change
-        d3.select("#selDataset").on("change", getData);
+            // Create Affordable Houses by Zip histogram
+            const zipCtx = document.getElementById('zipHistogram').getContext('2d');
+            new Chart(zipCtx, {
+                type: 'bar',
+                data: {
+                    labels: zipLabels,
+                    datasets: [{
+                        label: 'Number of Affordable Houses per ZIP Code',
+                        data: zipUnits,
+                        backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                        borderColor: 'rgba(255, 99, 132, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    scales: {
+                        y: {
+                            beginAtZero: true,
+                            ticks: {
+                                stepSize: 100 // Adjust step size as needed
+                            },
+                            title: {
+                                display: true,
+                                text: 'Number of Affordable Houses'
+                            }
+                        },
+                        x: {
+                            title: {
+                                display: true,
+                                text: 'Zip Code'
+                            }
+                        }
+                    }
+                }
+            });
+        });
     </script>
 </body>
 </html>
